# marzguard

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 001_initial.py
configs/: nginx.conf
docs/: API.md  ARCHITECTURE.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: main.tsx
frontend/src/api/: client.ts
frontend/src/components/: IPBadge.tsx  Layout.tsx  StatusIndicator.tsx
frontend/src/hooks/: useAuth.tsx  useWebSocket.ts
frontend/src/pages/: AuditLog.tsx  Dashboard.tsx  Login.tsx  Policies.tsx  Settings.tsx  Users.tsx
scripts/: entrypoint.sh  migrate.sh  seed.py
src/: config.py  dependencies.py  main.py
src/api/: auth.py  dashboard.py  logs.py  policies.py  router.py  settings.py  users.py  webhooks.py  ws.py
src/core/: enforcer.py  ipv6.py  log_consumer.py  log_parser.py  scheduler.py  tracker.py
src/models/: audit.py  database.py  policy.py  settings.py  user.py
src/schemas/: audit.py  dashboard.py  policy.py  user.py
src/services/: marzban.py  notify.py  telegram.py
tests/: test_enforcer.py  test_log_parser.py  test_tracker.py
